# agents-in-the-office

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  vite.config.ts
.chief/prds/sound-packs-patchbay/: prd.json  progress.md
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  macos_focus.rs  main.rs  transcript.rs  watcher.rs
src/classes/: Character.ts
src/components/: ActionPickerDialog.vue  AgentActivityPanel.vue  AgentSetupDialog.vue  AudioPlayer.vue  AutoTileChooserDialog.vue  AutoTilePickerDialog.vue  AutoTilePropsDialog.vue  CharacterEditorDialog.vue  CharacterSettings.vue  GridCanvas.vue  LayerControl.vue  ObjectDialog.vue  PackContextMenu.vue  SoundQuickPanel.vue  SoundsDialog.vue  SpritesheetCanvas.vue  TileSelector.vue  TileSizeScaleDialog.vue  Toolbar.vue  VerticalToolbar.vue
src/drivers/: AgentDriver.ts  ClaudeCodeDriver.ts  GeminiCliDriver.ts  activityMessages.ts  agentBubbleTexts.ts  agentStore.ts  npcHandle.ts  types.ts
src/i18n/: bubbleTexts.ts
src/router/: index.ts
src/stores/: characterStore.ts  editorStore.ts  emojiStore.ts  localeStore.ts  mapStore.ts  soundStore.ts  undoStore.ts
src/types/: character.ts
src/utils/: db.ts  debugLog.ts  fileIO.test.ts  fileIO.ts  fill.ts  nameGenerator.ts  pathfinding.ts  rmxpAutoTile.test.ts  rmxpAutoTile.ts  spriteLoader.ts  vxAutoTile.test.ts  vxAutoTile.ts
src/views/: EditorView.vue  RunView.vue
