[package]
name = "agents-in-the-office"
version = "0.1.0"
description = "Pixel-art office map editor with NPC agents"
authors = ["gukosowa"]
edition = "2024"

[lib]
name = "agents_in_the_office_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
dirs = "6"
chrono = "0.4"
tauri-plugin-window-state = "2"
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
